ASG8/new/parser.output
Grammar

    0 $accept: prog $end

    1 prog: GLOBAL declList stmtListO END

    2 declList: /* empty */
    3         | decl declList

    4 decl: DEF typeList END

    5 typeList: typeList SEMICOLON varList COLON type
    6         | typeList SEMICOLON typeDef
    7         | varList COLON type
    8         | typeDef

    9 varList: var COMMA varList
   10        | var

   11 var: ID sizeListO

   12 sizeListO: /* empty */
   13          | sizeList

   14 sizeList: sizeList LEFT_SQ_BKT INT_CONST RIGHT_SQ_BKT
   15         | LEFT_SQ_BKT INT_CONST RIGHT_SQ_BKT

   16 type: INT
   17     | FLOAT
   18     | NUL
   19     | ID

   20 typeDef: ID ASSIGN PRODUCT typeList END

   21 stmtListO: /* empty */
   22          | stmtList

   23 stmtList: stmtList SEMICOLON stmt
   24         | stmt

   25 stmt: assignmentStmt
   26     | readStmt
   27     | printStmt
   28     | ifStmt
   29     | whileStmt
   30     | returnStmt

   31 assignmentStmt: dotId ASSIGN exp

   32 dotId: id
   33      | id DOT dotId

   34 readStmt: READ FORMAT exp

   35 printStmt: PRINT FORMAT exp

   36 ifStmt: IF bExp COLON stmtList elsePart END

   37 elsePart: /* empty */
   38         | ELSE stmtList

   39 whileStmt: WHILE bExp COLON stmtList END

   40 returnStmt: RETURN expO

   41 expO: /* empty */
   42     | exp

   43 id: ID indexListO

   44 indexListO: /* empty */
   45           | indexList

   46 indexList: indexList LEFT_SQ_BKT exp RIGHT_SQ_BKT
   47          | LEFT_SQ_BKT exp RIGHT_SQ_BKT

   48 bExp: bExp OR bExp
   49     | bExp AND bExp
   50     | NOT bExp
   51     | LEFT_PAREN bExp RIGHT_PAREN
   52     | exp relOP exp

   53 relOP: EQ
   54      | LE
   55      | LT
   56      | GE
   57      | GT
   58      | NE

   59 exp: exp PLUS exp
   60    | exp MINUS exp
   61    | exp MULT exp
   62    | exp DIV exp
   63    | exp MOD exp
   64    | exp DOT exp
   65    | LEFT_PAREN exp RIGHT_PAREN
   66    | id
   67    | LEFT_PAREN ID COLON actParamListO RIGHT_PAREN
   68    | INT_CONST
   69    | FLOAT_CONST

   70 actParamListO: /* empty */
   71              | actParamList

   72 actParamList: actParamList COMMA exp
   73             | exp


Terminals, with rules where they appear

$end (0) 0
error (256)
AND (258) 49
ASSIGN (259) 20 31
COLON (260) 5 7 36 39 67
COMMA (261) 9 72
DEF (262) 4
ELSE (263) 38
DIV (264) 62
END (265) 1 4 20 36 39
EQ (266) 53
FLOAT (267) 17
GE (268) 56
GLOBAL (269) 1
GT (270) 57
IF (271) 36
INT (272) 16
LEFT_PAREN (273) 51 65 67
LEFT_SQ_BKT (274) 14 15 46 47
LE (275) 54
LT (276) 55
MINUS (277) 60
MOD (278) 63
MULT (279) 61
NE (280) 58
NOT (281) 50
NUL (282) 18
OR (283) 48
PLUS (284) 59
PRINT (285) 35
PRODUCT (286) 20
READ (287) 34
RETURN (288) 40
RIGHT_PAREN (289) 51 65 67
RIGHT_SQ_BKT (290) 14 15 46 47
SEMICOLON (291) 5 6 23
WHILE (292) 39
ID (293) 11 19 20 43 67
INT_CONST (294) 14 15 68
FLOAT_CONST (295) 69
DOT (296) 33 64
FORMAT (297) 34 35


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
prog (44)
    on left: 1, on right: 0
declList (45)
    on left: 2 3, on right: 1 3
decl (46)
    on left: 4, on right: 3
typeList (47)
    on left: 5 6 7 8, on right: 4 5 6 20
varList (48)
    on left: 9 10, on right: 5 7 9
var (49)
    on left: 11, on right: 9 10
sizeListO (50)
    on left: 12 13, on right: 11
sizeList (51)
    on left: 14 15, on right: 13 14
type (52)
    on left: 16 17 18 19, on right: 5 7
typeDef (53)
    on left: 20, on right: 6 8
stmtListO (54)
    on left: 21 22, on right: 1
stmtList (55)
    on left: 23 24, on right: 22 23 36 38 39
stmt (56)
    on left: 25 26 27 28 29 30, on right: 23 24
assignmentStmt (57)
    on left: 31, on right: 25
dotId (58)
    on left: 32 33, on right: 31 33
readStmt (59)
    on left: 34, on right: 26
printStmt (60)
    on left: 35, on right: 27
ifStmt (61)
    on left: 36, on right: 28
elsePart (62)
    on left: 37 38, on right: 36
whileStmt (63)
    on left: 39, on right: 29
returnStmt (64)
    on left: 40, on right: 30
expO (65)
    on left: 41 42, on right: 40
id (66)
    on left: 43, on right: 32 33 66
indexListO (67)
    on left: 44 45, on right: 43
indexList (68)
    on left: 46 47, on right: 45 46
bExp (69)
    on left: 48 49 50 51 52, on right: 36 39 48 49 50 51
relOP (70)
    on left: 53 54 55 56 57 58, on right: 52
exp (71)
    on left: 59 60 61 62 63 64 65 66 67 68 69, on right: 31 34 35 42
    46 47 52 59 60 61 62 63 64 65 72 73
actParamListO (72)
    on left: 70 71, on right: 67
actParamList (73)
    on left: 72 73, on right: 71 72


state 0

    0 $accept: . prog $end

    GLOBAL  shift, and go to state 1

    prog  go to state 2


state 1

    1 prog: GLOBAL . declList stmtListO END

    DEF  shift, and go to state 3

    $default  reduce using rule 2 (declList)

    declList  go to state 4
    decl      go to state 5


state 2

    0 $accept: prog . $end

    $end  shift, and go to state 6


state 3

    4 decl: DEF . typeList END

    ID  shift, and go to state 7

    typeList  go to state 8
    varList   go to state 9
    var       go to state 10
    typeDef   go to state 11


state 4

    1 prog: GLOBAL declList . stmtListO END

    IF      shift, and go to state 12
    PRINT   shift, and go to state 13
    READ    shift, and go to state 14
    RETURN  shift, and go to state 15
    WHILE   shift, and go to state 16
    ID      shift, and go to state 17

    $default  reduce using rule 21 (stmtListO)

    stmtListO       go to state 18
    stmtList        go to state 19
    stmt            go to state 20
    assignmentStmt  go to state 21
    dotId           go to state 22
    readStmt        go to state 23
    printStmt       go to state 24
    ifStmt          go to state 25
    whileStmt       go to state 26
    returnStmt      go to state 27
    id              go to state 28


state 5

    3 declList: decl . declList

    DEF  shift, and go to state 3

    $default  reduce using rule 2 (declList)

    declList  go to state 29
    decl      go to state 5


state 6

    0 $accept: prog $end .

    $default  accept


state 7

   11 var: ID . sizeListO
   20 typeDef: ID . ASSIGN PRODUCT typeList END

    ASSIGN       shift, and go to state 30
    LEFT_SQ_BKT  shift, and go to state 31

    $default  reduce using rule 12 (sizeListO)

    sizeListO  go to state 32
    sizeList   go to state 33


state 8

    4 decl: DEF typeList . END
    5 typeList: typeList . SEMICOLON varList COLON type
    6         | typeList . SEMICOLON typeDef

    END        shift, and go to state 34
    SEMICOLON  shift, and go to state 35


state 9

    7 typeList: varList . COLON type

    COLON  shift, and go to state 36


state 10

    9 varList: var . COMMA varList
   10        | var .

    COMMA  shift, and go to state 37

    $default  reduce using rule 10 (varList)


state 11

    8 typeList: typeDef .

    $default  reduce using rule 8 (typeList)


state 12

   36 ifStmt: IF . bExp COLON stmtList elsePart END

    LEFT_PAREN   shift, and go to state 38
    NOT          shift, and go to state 39
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id    go to state 42
    bExp  go to state 43
    exp   go to state 44


state 13

   35 printStmt: PRINT . FORMAT exp

    FORMAT  shift, and go to state 45


state 14

   34 readStmt: READ . FORMAT exp

    FORMAT  shift, and go to state 46


state 15

   40 returnStmt: RETURN . expO

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    $default  reduce using rule 41 (expO)

    expO  go to state 48
    id    go to state 42
    exp   go to state 49


state 16

   39 whileStmt: WHILE . bExp COLON stmtList END

    LEFT_PAREN   shift, and go to state 38
    NOT          shift, and go to state 39
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id    go to state 42
    bExp  go to state 50
    exp   go to state 44


state 17

   43 id: ID . indexListO

    LEFT_SQ_BKT  shift, and go to state 51

    $default  reduce using rule 44 (indexListO)

    indexListO  go to state 52
    indexList   go to state 53


state 18

    1 prog: GLOBAL declList stmtListO . END

    END  shift, and go to state 54


state 19

   22 stmtListO: stmtList .
   23 stmtList: stmtList . SEMICOLON stmt

    SEMICOLON  shift, and go to state 55

    $default  reduce using rule 22 (stmtListO)


state 20

   24 stmtList: stmt .

    $default  reduce using rule 24 (stmtList)


state 21

   25 stmt: assignmentStmt .

    $default  reduce using rule 25 (stmt)


state 22

   31 assignmentStmt: dotId . ASSIGN exp

    ASSIGN  shift, and go to state 56


state 23

   26 stmt: readStmt .

    $default  reduce using rule 26 (stmt)


state 24

   27 stmt: printStmt .

    $default  reduce using rule 27 (stmt)


state 25

   28 stmt: ifStmt .

    $default  reduce using rule 28 (stmt)


state 26

   29 stmt: whileStmt .

    $default  reduce using rule 29 (stmt)


state 27

   30 stmt: returnStmt .

    $default  reduce using rule 30 (stmt)


state 28

   32 dotId: id .
   33      | id . DOT dotId

    DOT  shift, and go to state 57

    $default  reduce using rule 32 (dotId)


state 29

    3 declList: decl declList .

    $default  reduce using rule 3 (declList)


state 30

   20 typeDef: ID ASSIGN . PRODUCT typeList END

    PRODUCT  shift, and go to state 58


state 31

   15 sizeList: LEFT_SQ_BKT . INT_CONST RIGHT_SQ_BKT

    INT_CONST  shift, and go to state 59


state 32

   11 var: ID sizeListO .

    $default  reduce using rule 11 (var)


state 33

   13 sizeListO: sizeList .
   14 sizeList: sizeList . LEFT_SQ_BKT INT_CONST RIGHT_SQ_BKT

    LEFT_SQ_BKT  shift, and go to state 60

    $default  reduce using rule 13 (sizeListO)


state 34

    4 decl: DEF typeList END .

    $default  reduce using rule 4 (decl)


state 35

    5 typeList: typeList SEMICOLON . varList COLON type
    6         | typeList SEMICOLON . typeDef

    ID  shift, and go to state 7

    varList  go to state 61
    var      go to state 10
    typeDef  go to state 62


state 36

    7 typeList: varList COLON . type

    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    NUL    shift, and go to state 65
    ID     shift, and go to state 66

    type  go to state 67


state 37

    9 varList: var COMMA . varList

    ID  shift, and go to state 68

    varList  go to state 69
    var      go to state 10


state 38

   51 bExp: LEFT_PAREN . bExp RIGHT_PAREN
   65 exp: LEFT_PAREN . exp RIGHT_PAREN
   67    | LEFT_PAREN . ID COLON actParamListO RIGHT_PAREN

    LEFT_PAREN   shift, and go to state 38
    NOT          shift, and go to state 39
    ID           shift, and go to state 70
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id    go to state 42
    bExp  go to state 71
    exp   go to state 72


state 39

   50 bExp: NOT . bExp

    LEFT_PAREN   shift, and go to state 38
    NOT          shift, and go to state 39
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id    go to state 42
    bExp  go to state 73
    exp   go to state 44


state 40

   68 exp: INT_CONST .

    $default  reduce using rule 68 (exp)


state 41

   69 exp: FLOAT_CONST .

    $default  reduce using rule 69 (exp)


state 42

   66 exp: id .

    $default  reduce using rule 66 (exp)


state 43

   36 ifStmt: IF bExp . COLON stmtList elsePart END
   48 bExp: bExp . OR bExp
   49     | bExp . AND bExp

    AND    shift, and go to state 74
    COLON  shift, and go to state 75
    OR     shift, and go to state 76


state 44

   52 bExp: exp . relOP exp
   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DIV    shift, and go to state 77
    EQ     shift, and go to state 78
    GE     shift, and go to state 79
    GT     shift, and go to state 80
    LE     shift, and go to state 81
    LT     shift, and go to state 82
    MINUS  shift, and go to state 83
    MOD    shift, and go to state 84
    MULT   shift, and go to state 85
    NE     shift, and go to state 86
    PLUS   shift, and go to state 87
    DOT    shift, and go to state 88

    relOP  go to state 89


state 45

   35 printStmt: PRINT FORMAT . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 90


state 46

   34 readStmt: READ FORMAT . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 91


state 47

   65 exp: LEFT_PAREN . exp RIGHT_PAREN
   67    | LEFT_PAREN . ID COLON actParamListO RIGHT_PAREN

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 70
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 92


state 48

   40 returnStmt: RETURN expO .

    $default  reduce using rule 40 (returnStmt)


state 49

   42 expO: exp .
   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DIV    shift, and go to state 77
    MINUS  shift, and go to state 83
    MOD    shift, and go to state 84
    MULT   shift, and go to state 85
    PLUS   shift, and go to state 87
    DOT    shift, and go to state 88

    $default  reduce using rule 42 (expO)


state 50

   39 whileStmt: WHILE bExp . COLON stmtList END
   48 bExp: bExp . OR bExp
   49     | bExp . AND bExp

    AND    shift, and go to state 74
    COLON  shift, and go to state 93
    OR     shift, and go to state 76


state 51

   47 indexList: LEFT_SQ_BKT . exp RIGHT_SQ_BKT

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 94


state 52

   43 id: ID indexListO .

    $default  reduce using rule 43 (id)


state 53

   45 indexListO: indexList .
   46 indexList: indexList . LEFT_SQ_BKT exp RIGHT_SQ_BKT

    LEFT_SQ_BKT  shift, and go to state 95

    $default  reduce using rule 45 (indexListO)


state 54

    1 prog: GLOBAL declList stmtListO END .

    $default  reduce using rule 1 (prog)


state 55

   23 stmtList: stmtList SEMICOLON . stmt

    IF      shift, and go to state 12
    PRINT   shift, and go to state 13
    READ    shift, and go to state 14
    RETURN  shift, and go to state 15
    WHILE   shift, and go to state 16
    ID      shift, and go to state 17

    stmt            go to state 96
    assignmentStmt  go to state 21
    dotId           go to state 22
    readStmt        go to state 23
    printStmt       go to state 24
    ifStmt          go to state 25
    whileStmt       go to state 26
    returnStmt      go to state 27
    id              go to state 28


state 56

   31 assignmentStmt: dotId ASSIGN . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 97


state 57

   33 dotId: id DOT . dotId

    ID  shift, and go to state 17

    dotId  go to state 98
    id     go to state 28


state 58

   20 typeDef: ID ASSIGN PRODUCT . typeList END

    ID  shift, and go to state 7

    typeList  go to state 99
    varList   go to state 9
    var       go to state 10
    typeDef   go to state 11


state 59

   15 sizeList: LEFT_SQ_BKT INT_CONST . RIGHT_SQ_BKT

    RIGHT_SQ_BKT  shift, and go to state 100


state 60

   14 sizeList: sizeList LEFT_SQ_BKT . INT_CONST RIGHT_SQ_BKT

    INT_CONST  shift, and go to state 101


state 61

    5 typeList: typeList SEMICOLON varList . COLON type

    COLON  shift, and go to state 102


state 62

    6 typeList: typeList SEMICOLON typeDef .

    $default  reduce using rule 6 (typeList)


state 63

   17 type: FLOAT .

    $default  reduce using rule 17 (type)


state 64

   16 type: INT .

    $default  reduce using rule 16 (type)


state 65

   18 type: NUL .

    $default  reduce using rule 18 (type)


state 66

   19 type: ID .

    $default  reduce using rule 19 (type)


state 67

    7 typeList: varList COLON type .

    $default  reduce using rule 7 (typeList)


state 68

   11 var: ID . sizeListO

    LEFT_SQ_BKT  shift, and go to state 31

    $default  reduce using rule 12 (sizeListO)

    sizeListO  go to state 32
    sizeList   go to state 33


state 69

    9 varList: var COMMA varList .

    $default  reduce using rule 9 (varList)


state 70

   43 id: ID . indexListO
   67 exp: LEFT_PAREN ID . COLON actParamListO RIGHT_PAREN

    COLON        shift, and go to state 103
    LEFT_SQ_BKT  shift, and go to state 51

    $default  reduce using rule 44 (indexListO)

    indexListO  go to state 52
    indexList   go to state 53


state 71

   48 bExp: bExp . OR bExp
   49     | bExp . AND bExp
   51     | LEFT_PAREN bExp . RIGHT_PAREN

    AND          shift, and go to state 74
    OR           shift, and go to state 76
    RIGHT_PAREN  shift, and go to state 104


state 72

   52 bExp: exp . relOP exp
   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp
   65    | LEFT_PAREN exp . RIGHT_PAREN

    DIV          shift, and go to state 77
    EQ           shift, and go to state 78
    GE           shift, and go to state 79
    GT           shift, and go to state 80
    LE           shift, and go to state 81
    LT           shift, and go to state 82
    MINUS        shift, and go to state 83
    MOD          shift, and go to state 84
    MULT         shift, and go to state 85
    NE           shift, and go to state 86
    PLUS         shift, and go to state 87
    RIGHT_PAREN  shift, and go to state 105
    DOT          shift, and go to state 88

    relOP  go to state 89


state 73

   48 bExp: bExp . OR bExp
   49     | bExp . AND bExp
   50     | NOT bExp .

    $default  reduce using rule 50 (bExp)


state 74

   49 bExp: bExp AND . bExp

    LEFT_PAREN   shift, and go to state 38
    NOT          shift, and go to state 39
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id    go to state 42
    bExp  go to state 106
    exp   go to state 44


state 75

   36 ifStmt: IF bExp COLON . stmtList elsePart END

    IF      shift, and go to state 12
    PRINT   shift, and go to state 13
    READ    shift, and go to state 14
    RETURN  shift, and go to state 15
    WHILE   shift, and go to state 16
    ID      shift, and go to state 17

    stmtList        go to state 107
    stmt            go to state 20
    assignmentStmt  go to state 21
    dotId           go to state 22
    readStmt        go to state 23
    printStmt       go to state 24
    ifStmt          go to state 25
    whileStmt       go to state 26
    returnStmt      go to state 27
    id              go to state 28


state 76

   48 bExp: bExp OR . bExp

    LEFT_PAREN   shift, and go to state 38
    NOT          shift, and go to state 39
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id    go to state 42
    bExp  go to state 108
    exp   go to state 44


state 77

   62 exp: exp DIV . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 109


state 78

   53 relOP: EQ .

    $default  reduce using rule 53 (relOP)


state 79

   56 relOP: GE .

    $default  reduce using rule 56 (relOP)


state 80

   57 relOP: GT .

    $default  reduce using rule 57 (relOP)


state 81

   54 relOP: LE .

    $default  reduce using rule 54 (relOP)


state 82

   55 relOP: LT .

    $default  reduce using rule 55 (relOP)


state 83

   60 exp: exp MINUS . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 110


state 84

   63 exp: exp MOD . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 111


state 85

   61 exp: exp MULT . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 112


state 86

   58 relOP: NE .

    $default  reduce using rule 58 (relOP)


state 87

   59 exp: exp PLUS . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 113


state 88

   64 exp: exp DOT . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 114


state 89

   52 bExp: exp relOP . exp

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 115


state 90

   35 printStmt: PRINT FORMAT exp .
   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DIV    shift, and go to state 77
    MINUS  shift, and go to state 83
    MOD    shift, and go to state 84
    MULT   shift, and go to state 85
    PLUS   shift, and go to state 87
    DOT    shift, and go to state 88

    $default  reduce using rule 35 (printStmt)


state 91

   34 readStmt: READ FORMAT exp .
   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DIV    shift, and go to state 77
    MINUS  shift, and go to state 83
    MOD    shift, and go to state 84
    MULT   shift, and go to state 85
    PLUS   shift, and go to state 87
    DOT    shift, and go to state 88

    $default  reduce using rule 34 (readStmt)


state 92

   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp
   65    | LEFT_PAREN exp . RIGHT_PAREN

    DIV          shift, and go to state 77
    MINUS        shift, and go to state 83
    MOD          shift, and go to state 84
    MULT         shift, and go to state 85
    PLUS         shift, and go to state 87
    RIGHT_PAREN  shift, and go to state 105
    DOT          shift, and go to state 88


state 93

   39 whileStmt: WHILE bExp COLON . stmtList END

    IF      shift, and go to state 12
    PRINT   shift, and go to state 13
    READ    shift, and go to state 14
    RETURN  shift, and go to state 15
    WHILE   shift, and go to state 16
    ID      shift, and go to state 17

    stmtList        go to state 116
    stmt            go to state 20
    assignmentStmt  go to state 21
    dotId           go to state 22
    readStmt        go to state 23
    printStmt       go to state 24
    ifStmt          go to state 25
    whileStmt       go to state 26
    returnStmt      go to state 27
    id              go to state 28


state 94

   47 indexList: LEFT_SQ_BKT exp . RIGHT_SQ_BKT
   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DIV           shift, and go to state 77
    MINUS         shift, and go to state 83
    MOD           shift, and go to state 84
    MULT          shift, and go to state 85
    PLUS          shift, and go to state 87
    RIGHT_SQ_BKT  shift, and go to state 117
    DOT           shift, and go to state 88


state 95

   46 indexList: indexList LEFT_SQ_BKT . exp RIGHT_SQ_BKT

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    id   go to state 42
    exp  go to state 118


state 96

   23 stmtList: stmtList SEMICOLON stmt .

    $default  reduce using rule 23 (stmtList)


state 97

   31 assignmentStmt: dotId ASSIGN exp .
   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DIV    shift, and go to state 77
    MINUS  shift, and go to state 83
    MOD    shift, and go to state 84
    MULT   shift, and go to state 85
    PLUS   shift, and go to state 87
    DOT    shift, and go to state 88

    $default  reduce using rule 31 (assignmentStmt)


state 98

   33 dotId: id DOT dotId .

    $default  reduce using rule 33 (dotId)


state 99

    5 typeList: typeList . SEMICOLON varList COLON type
    6         | typeList . SEMICOLON typeDef
   20 typeDef: ID ASSIGN PRODUCT typeList . END

    END        shift, and go to state 119
    SEMICOLON  shift, and go to state 35


state 100

   15 sizeList: LEFT_SQ_BKT INT_CONST RIGHT_SQ_BKT .

    $default  reduce using rule 15 (sizeList)


state 101

   14 sizeList: sizeList LEFT_SQ_BKT INT_CONST . RIGHT_SQ_BKT

    RIGHT_SQ_BKT  shift, and go to state 120


state 102

    5 typeList: typeList SEMICOLON varList COLON . type

    FLOAT  shift, and go to state 63
    INT    shift, and go to state 64
    NUL    shift, and go to state 65
    ID     shift, and go to state 66

    type  go to state 121


state 103

   67 exp: LEFT_PAREN ID COLON . actParamListO RIGHT_PAREN

    LEFT_PAREN   shift, and go to state 47
    ID           shift, and go to state 17
    INT_CONST    shift, and go to state 40
    FLOAT_CONST  shift, and go to state 41

    $default  reduce using rule 70 (actParamListO)

    id             go to state 42
    exp            go to state 122
    actParamListO  go to state 123
    actParamList   go to state 124


state 104

   51 bExp: LEFT_PAREN bExp RIGHT_PAREN .

    $default  reduce using rule 51 (bExp)


state 105

   65 exp: LEFT_PAREN exp RIGHT_PAREN .

    $default  reduce using rule 65 (exp)


state 106

   48 bExp: bExp . OR bExp
   49     | bExp . AND bExp
   49     | bExp AND bExp .

    $default  reduce using rule 49 (bExp)


state 107

   23 stmtList: stmtList . SEMICOLON stmt
   36 ifStmt: IF bExp COLON stmtList . elsePart END

    ELSE       shift, and go to state 125
    SEMICOLON  shift, and go to state 55

    $default  reduce using rule 37 (elsePart)

    elsePart  go to state 126


state 108

   48 bExp: bExp . OR bExp
   48     | bExp OR bExp .
   49     | bExp . AND bExp

    $default  reduce using rule 48 (bExp)


state 109

   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   62    | exp DIV exp .
   63    | exp . MOD exp
   64    | exp . DOT exp

    DOT  shift, and go to state 88

    $default  reduce using rule 62 (exp)


state 110

   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   60    | exp MINUS exp .
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DIV   shift, and go to state 77
    MOD   shift, and go to state 84
    MULT  shift, and go to state 85
    DOT   shift, and go to state 88

    $default  reduce using rule 60 (exp)


state 111

   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   62    | exp . DIV exp
   63    | exp . MOD exp
   63    | exp MOD exp .
   64    | exp . DOT exp

    DOT  shift, and go to state 88

    $default  reduce using rule 63 (exp)


state 112

   59 exp: exp . PLUS exp
   60    | exp . MINUS exp
   61    | exp . MULT exp
   61    | exp MULT exp .
   62    | exp . DIV exp
   63    | exp . MOD exp
   64    | exp . DOT exp

    DOT  shift, and go to state 88

    $default  reduce using rule 61 (exp)


state 113
